# lltech

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ll_codec/: CMakeLists.txt  README.md
ll_codec/codec/: CMakeLists.txt  ixr_codec.cc  ixr_codec.h  ixr_codec_config.h  ixr_codec_config.h.in  ixr_codec_def.h  ixr_codec_impl.h  ixr_decoder_impl.cc  ixr_encoder_impl.cc  ixr_vpp_impl.cc
ll_codec/impl/msdk/: CMakeLists.txt
ll_codec/impl/msdk/decoder/: jpeg_helper.h  mfx_dec_base.cc  mfx_dec_base.h
ll_codec/impl/msdk/encoder/: enc_core.cc  enc_core.h  mfx_framework_enc.cc  mfx_framework_enc.h  mfx_multilayer.cc  mfx_multilayer.h
ll_codec/impl/msdk/mfx/: igfx_s3dcontrol.h  mfxbrc.h  mfxcamera.h  mfxcommon.h  mfxdefs.h  mfxfei.h  mfxfeihevc.h  mfxpcp.h  mfxplugin++.h  mfxplugin.h  mfxstructures.h  mfxvideo.h  mfxvp9.h
ll_codec/impl/msdk/mfx_dispatch/src/: mfx_load_dll.cpp
ll_codec/impl/msdk/utility/: mfx_alloc_base.h  mfx_alloc_d3d.cc  mfx_alloc_d3d.h  mfx_alloc_sys.cc  mfx_alloc_sys.h  mfx_alloc_va.cc  mfx_alloc_va.h  mfx_base.h  mfx_config.h  mfx_config.h.in  mfx_error.cc  mfx_error.h  mfx_external_buffers.h  simplepool.h
ll_codec/impl/msdk/vpp/: mfx_vpp_chain.cc  mfx_vpp_chain.h
ll_codec/impl/nvenc/: CMakeLists.txt  nv_configure.h  nv_error.h  nv_framework.h
ll_codec/impl/nvenc/api/: nvEncodeAPI++.h  nvEncodeAPI.h
ll_codec/impl/nvenc/src/: nv_framework.cc
ll_codec/impl/thread_safe_stl/queue/: lock_free_queue.h  thread_safe_queue.h
ll_codec/tests/: CMakeLists.txt  test_encode.cc  test_vpp.cc
ll_graphic/: CMakeLists.txt  README.md
ll_graphic/core/: prerequisite_core.h
ll_graphic/core/gpu_buffer/: gpu_buffer.h
ll_graphic/core/renderer/: renderer.h
ll_graphic/core/shader/: shader.h  shader_hlsl.cc  shader_hlsl.h
ll_graphic/core/swapchain/: swapchain.h
ll_graphic/core/texture/: texture.h
ll_graphic/core/vertex/: vertex_buffer.cc  vertex_buffer.h  vertex_element.h
ll_graphic/engine/: engine.cc  engine.h  types.h
ll_graphic/errors/: error.cc  error.h
ll_graphic/export/: export.h
ll_graphic/low_level/dx11/: gpu_buffer_dx11.cc  gpu_buffer_dx11.h  mapper_dx11.cc  mapper_dx11.h  prerequisite_dx11.h  renderer_dx11.cc  renderer_dx11.h  swapchain_dx11.cc  swapchain_dx11.h  texture_dx11.cc  texture_dx11.h
ll_graphic/low_level/vulkan/: env_vk.h  mapper_vk.cc  mapper_vk.h  prerequisite_vk.h  renderer_vk.cc  renderer_vk.h  swapchain_vk.cc  swapchain_vk.h  texture_vk.cc  texture_vk.h
ll_graphic/math/: math.cc  math.h  matrix.h  position.h  rotation.h
ll_graphic/math/backend/basic/: matrix.inl  position.inl  rotation.inl
ll_graphic/math/backend/directxmath/: matrix.inl  position.inl  rotation.inl
ll_graphic/math/backend/glm/: matrix.inl  position.inl  rotation.inl
ll_graphic/model/: ball.h  basic_shape.cc  camera.cc  camera.h  cube.h  cylinder.h  model.cc  model.h  plain.h  scenes.cc  scenes.h  spatial.cc  spatial.h
ll_graphic/model/mesh/: mesh.h
ll_graphic/model/vertex/: vertex.h
ll_graphic/platform/: native_object.h  noncopyable.h  platform.h
ll_graphic/platform/window/: window.h  window_event.h  window_win32.cc  window_win32.h
ll_graphic/tests/: CMakeLists.txt  test_vulkan.cc  test_window.cc
ll_graphic/tests/dx11/: test_core.cc  test_show_image.cc
ll_graphic/tests/misc/: test_camera.cc  test_math.cc
ll_graphic/utils/: names.h  node.h
scripts/cmake/: FindC4Metal.cmake  c4metal.cmake  ffmpeg.cmake  glm.cmake  gtest_helper.cmake  imgui.cmake  jsoncpp.cmake  ll-config.cmake  msvc_helper.cmake  nanomsg.cmake  openvr.cmake  spdlog.cmake  tensorflow.cmake
scripts/tools/: .clang-format  format_all.py  protect_header.py
